syntax = "proto3";
import "transaction.proto";
package pactus;
option go_package = "github.com/pactus-project/pactus/www/grpc/pactus";
option java_package = "pactus.utility";

service Utility {
  // CalculateFee calculates the transaction fee based on the specified amount
  // and payload type.
  rpc CalculateFee(CalculateFeeRequest) returns (CalculateFeeResponse);
}

// Request message for calculating transaction fee.
message CalculateFeeRequest {
  // Transaction amount.
  int64 amount = 1;
  // Type of transaction payload.
  pactus.PayloadType payload_type = 2;
  // Indicates that amount should be fixed and includes the fee.
  bool fixed_amount = 3;
}

// Response message containing the calculated transaction fee.
message CalculateFeeResponse {
  // Calculated amount.
  int64 amount = 1;
  // Calculated transaction fee.
  int64 fee = 2;
}